[package]
name = "stm32f103c8t6"
edition = "2021"
authors = ["limit <limitliu@qq.com>"]
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32f1 = { version = "0.15.1", features = ["stm32f103", "rt"] }

[[bin]]
name = "stm32f103c8t6"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
